hard-gists/b26db61d8bde30b8a88451615105da7a/run.log
=== Docker Run Log for b26db61d8bde30b8a88451615105da7a ===
Started at: Mi 29. Okt 19:25:11 CET 2025

[2025-10-29 19:25:11] START: Running container for b26db61d8bde30b8a88451615105da7a
[2025-10-29 19:25:12] SUCCESS: Container 5c5493acdbfc5f46dc6030c0e7d8c646299982a728fd4458a22e224f9e17d157 started for b26db61d8bde30b8a88451615105da7a
=== Container logs for b26db61d8bde30b8a88451615105da7a ===
  File "/snippet.py", line 104
    print "Detected %i Cars" % len(ellipses)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b26db61d8bde30b8a88451615105da7a ===
[2025-10-29 19:25:14] INFO: Container 5c5493acdbfc5f46dc6030c0e7d8c646299982a728fd4458a22e224f9e17d157 has stopped
